dom/promise/Promise-inl.h
@@ -81,6 +81,28 @@ struct StorageTypeHelper<SmartPtr<T>, true, false>
 template <typename T>
 using StorageType = typename StorageTypeHelper<typename Decay<T>::Type>::Type;
 
+// Helpers to choose the correct argument type based on the storage type. Smart
+// pointers are converted to the corresponding raw pointer type. Everything else
+// is passed by move reference.
+//
+// Note: We can't just use std::forward for this because the input type may be a
+// raw pointer which does not match the argument type, and while the
+// spec-compliant behavior there should still give us the expected results, MSVC
+// considers it an illegal use of std::forward.
+template <template <typename> class SmartPtr, typename T>
+decltype(DeclVal<SmartPtr<T>>().get())
+ArgType(SmartPtr<T>& aVal)
+{
+  return aVal.get();
+}
+
+template <typename T>
+T&&
+ArgType(T& aVal)
+{
+  return std::move(aVal);
+}
+
 using ::ImplCycleCollectionUnlink;
 
 template <typename Callback, typename... Args>
@@ -118,7 +140,7 @@ protected:
   CallCallback(JSContext* aCx, const Callback& aHandler, JS::Handle<JS::Value> aValue,
                std::index_sequence<Indices...>)
   {
-    return mOnResolve(aCx, aValue, std::forward<Args>(Get<Indices>(mArgs))...);
+    return mOnResolve(aCx, aValue, ArgType(Get<Indices>(mArgs))...);
   }
 
   already_AddRefed<Promise>
@@ -135,9 +157,7 @@ protected:
 } // anonymous namespace
 
 template <typename Callback, typename... Args>
-typename EnableIf<
-  Promise::IsHandlerCallback<Callback, Args...>::value,
-  Result<RefPtr<Promise>, nsresult>>::Type
+Promise::ThenResult<Callback, Args...>
 Promise::ThenWithCycleCollectedArgs(Callback&& aOnResolve, Args&&... aArgs)
 {
   using HandlerType = NativeThenHandler<Callback, Args...>;
